All figures in EW section fixed
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@324 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -153,13 +153,13 @@ into two $b-$quarks is shown in Fig.~\ref{fig:Hbb_Dim5}, for points similar to t
  \begin{figure}[hbpt!]
  	\centering
  	\subfloat[Leading $b-$jet transverse momentum]{
- 		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/xxhhg5/truth_leading_b_pt} %\label{fig:met_cmp_high}
+ 		\includegraphics[width=0.8\linewidth]{figures/EW/monoH/xxhhg5/truth_leading_b_pt} %\label{fig:met_cmp_high}
  	}
  	\hfill
  	\subfloat[Leading $b-$jet pseudorapidity]{
- 		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/xxhhg5/truth_leading_b_eta} %\label{fig:met_cmp_low}
+ 		\includegraphics[width=0.8\linewidth]{figures/EW/monoH/xxhhg5/truth_leading_b_eta} %\label{fig:met_cmp_low}
  	}
-% 	\hfill
+ 	\hfill
 % 	\subfloat[Leading $b-$jet transverse momentum]{
 % 		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/xxhhg5/truth_subleading_b_pt} %\label{fig:met_cmp_high}
 % 	}
@@ -170,9 +170,8 @@ into two $b-$quarks is shown in Fig.~\ref{fig:Hbb_Dim5}, for points similar to t
 % 	\hfill
 %TODO: put in appendix
  	\subfloat[Angular distance between the two leading $b-$jets]{
- 		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/xxhhg5/truth_bb_deltar} %\label{fig:met_cmp_low}
+ 		\includegraphics[width=0.8\linewidth]{figures/EW/monoH/xxhhg5/truth_bb_deltar} %\label{fig:met_cmp_low}
  	}
- 	\hfill
  	\caption{Comparison of the kinematic distributions for the two leading $b-$ jets (from the Higgs decay) in the model with direct interactions
  		between the Higgs boson and the DM particle, when varying the DM mass. 
  		\label{fig:Hbb_Dim5}}
@@ -244,8 +243,8 @@ the kinematic distributions for dimension-7 scalar and pseudoscalar operators
 only shows small differences. This has been verified from a generator-level study:
 the signal acceptance after a simplified analysis selection 
 (\MET$>$350~\gev, leading jet $p_T > $ 40~\gev, minimum azimuthal difference between
-either of the two jets and the \MET direction $>$ 0.4) is roughly 70\% for both. 
-We therefore only suggest to generate one of the two models. 
+either of the two jets and the \MET direction $>$ 0.4) is roughly 70\% for both models, independent from the coefficients $c_1$ and $c_2$. 
+We therefore only suggest to generate one of the two models.
 %Todo{When we have the cross-sections for both, we can recommend the one with the highest cross-section.}
 
 %as shown in Fig.~\ref{fig:EW_EFT5_gamma_MET}.
@@ -269,15 +268,15 @@ rescaling of the cross-sections.
 
 \begin{figure}[h!]
   \centering
-  \subfloat[Missing transverse momentum distribution.\label{fig:EFTD7_EW_Z_MET}]{%
-  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/metPt}
-  }
-  \hfill
-  \subfloat[Acceptance.\label{fig:EFTD7_EW_Z_acc}]{%
-  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/Sscale_newplot.pdf}
-  }
-    \caption{\MET distribution and acceptance for the dimension-7 model with a hadronically decaying Z in the final state,
-    for the scalar and pseudoscalar operators representing direct interactions between DM and bosons. The y axis units are multiplied by 100.}
+%  \subfloat[Missing transverse momentum distribution.\label{fig:EFTD7_EW_Z_MET}]{%
+  	\includegraphics[width=0.95\textwidth]{figures/EW/monoZhad_SP/metPt}
+%  }
+%  \hfill
+%  \subfloat[Acceptance.\label{fig:EFTD7_EW_Z_acc}]{%
+%  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/Sscale_newplot.pdf}
+%  }
+    \caption{\MET distribution for the dimension-7 model with a hadronically decaying Z in the final state,
+    for the scalar and pseudoscalar operators representing direct interactions between DM and bosons. The values of the coefficients in the legend are multiplied by 100.}
     \label{fig:EFTD7_EW_kinematics}
 \end{figure}
 
