Figures for monojet section fixed
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@325 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -9,10 +9,9 @@ All models detailed in this Section are applicable to signatures where
  a photon, a W boson, a Z boson or a Higgs boson
  is radiated from the initial state partons instead of a gluon. 
 The experimental signature is identified as \textit{V+\MET} and it
-has been studied in Refs.~\cite{}.
-
-\Todo{Add experimental citations.}
-\Todo{Add link to section describing EW bosons from a blob. CD: why here?}
+has been sought by ATLAS and CMS in Refs.~\cite{Khachatryan:2014rwa,Aad:2014tda,Khachatryan:2014tva,ATLAS:2014wra,Aad:2013oja,Aad:2014vka}. 
+This signature is also produced by the models described in 
+Section~\ref{subsec:EWSpecificModels}.
 
 Monojet searches are generally more sensitive
 with respect to final states including bosons, due to the much
