Added new sHat figure
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@326 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -421,10 +421,11 @@ No parton matching is required.
 The models for the $t \bar{t}$ and $b \bar{b}$ signatures are generated at leading
 order with \madgraph 2.2.2, using Pythia8 for the parton shower. No matching is needed. 
 Parameter cards can be found on the Forum SVN repository~\cite{ForumSVN_DMTTBar}.
-No parton matching is required. 
+No parton matching is required in this case. 
 
-We simulate the bFDM model using the {\tt MG5\_aMC} v2.2.3, using Pythia8 for the parton shower. 
-No matching is needed. The corresponding card files can be found 
+We simulate the bFDM model at LO+PS using the {\tt MG5\_aMC} v2.2.3 generator and Pythia8 for the parton shower. 
+Parton matching is needed in the case of the $b\bar{b}$+\MET{} final state, but it has not been studied within the Forum. 
+The corresponding card files can be found 
 on the Forum SVN repository~\cite{ForumSVN_DMSingleB}.
 
 \subsubsection{Quark flavor scheme and masses}
