Added warning on t-channel section
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@327 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -10,6 +10,10 @@
 % http://arxiv.org/abs/arXiv:1402.2285, 
 % and http://arxiv.org/abs/arXiv:1409.2893
 
+\textbf{\color{red}Note from the organizers: \color{black} we've recently uncovered discrepancies in the two models 
+used in the t-channel section. This will require further changes to this section that will be circulated separately
+in the next few days.}
+
 The preceding sections address models with a Dirac fermion coupled to
 the SM through exchange of a neutral \spinzero or \spinone particle in an
 \schannel process.  A \tchannel process may couple the SM and DM
@@ -50,7 +54,7 @@ The free parameters are then
 \{ \mDM,\, \Mphi,\, g\}.
 \end{equation}
 
-\Todo{What about Tait model?}
+%\Todo{What about Tait model?}
 %\vspace{5mm}
 
 The minimal width of each mediator is expressed, using the example of decay to an up quark, as
